@@ -3,9 +3,11 @@ package org.github.fourth.leetcode;
 import org.github.fourth.leetcode.common.TreeNode;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -16,7 +18,7 @@ class LeetCode_124_maxPathSumTest {
     private final LeetCode_124_maxPathSum leetCode124MaxPathSum = new LeetCode_124_maxPathSum();
 
 
-    //    @ParameterizedTest
+//    @ParameterizedTest
     @MethodSource("generateRightCase")
     public void test01(TreeNode root, int expectedResult) {
         int actResult = leetCode124MaxPathSum.maxPathSum01(root);
@@ -33,7 +35,7 @@ class LeetCode_124_maxPathSumTest {
     public static Stream<Arguments> generateRightCase() {
         return Stream.of(
                 arguments(TreeNode.build(List.of(2, 1, 3)), 6),
-                arguments(TreeNode.build(List.of(-10, 9, 20, null, null, 15, 7)), 42)
+                arguments(TreeNode.build(Arrays.asList(-10, 9, 20, null, null, 15, 7)), 42)
         );
     }
 
